
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 int Menu () ;
 int SIZE ;
 int Usage () ;
 int buildFile (int *) ;
 int exit (int) ;
 char* getcwd (char*,size_t) ;
 int printf (char*,...) ;
 int strcat (int *,char*) ;
 int strcpy (int *,char*) ;

int main(int argc, char *argv[])
{ if(argc < 2) {
   Usage();
   Menu();
   exit(-1); }
  uint8_t b[SIZE];
  strcpy(b, argv[2]);
  strcat(b, ".m3u");
  buildFile(b);
  printf("\tFILE DONE !\n");
  char *path;
  size_t size;
  path = getcwd(path, size);
  printf("\tThe file is saved in the directory : %s", path);
  return 0;
}
